# Freedom

./: brand-strategy.md  kyvern-roadmap.md  landing-page-design.md  nexus-agents-strategy.md
kyvern-shield/: .gitignore  BACKLOG.md  COMPETITIVE-ANALYSIS.md  KYVERN-SHIELD-EXPLAINED.md  PITCH-GUIDE.md  README.md  RESEARCH-FOUNDATION.md  TESTING-GUIDE.md  commitlint.config.js  package.json  pnpm-lock.yaml  turbo.json
kyvern-shield/apps/api/: .env.example  ARCHITECTURE.md  README.md  pyproject.toml
kyvern-shield/apps/api/data/: blacklist.db
kyvern-shield/apps/api/src/: __init__.py  config.py  main.py
kyvern-shield/apps/api/src/db/: __init__.py  blacklist.py  schema.sql  supabase.py
kyvern-shield/apps/api/src/models/: __init__.py  blacklist.py  intent.py
kyvern-shield/apps/api/src/routes/: __init__.py  agents.py  alerts.py  analysis.py  api_keys.py  health.py  transactions.py
kyvern-shield/apps/api/src/services/: __init__.py  analyzer.py  auth.py  circuit_breaker.py  heuristic.py  llm_analyzer.py  source_detection.py
kyvern-shield/apps/docs/: index.md  package.json
kyvern-shield/apps/docs/.vitepress/: config.ts
kyvern-shield/apps/docs/api-reference/: index.md
kyvern-shield/apps/docs/guides/: getting-started.md
kyvern-shield/apps/docs/research/: index.md  indirect-injection.md
kyvern-shield/apps/web/: .env.example  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
kyvern-shield/apps/web/src/app/: globals.css  layout.tsx  page.tsx
kyvern-shield/apps/web/src/components/: Hero.tsx  ResearchProducts.tsx
kyvern-shield/contracts/circuit-breaker/: Anchor.toml  Cargo.toml  README.md
kyvern-shield/contracts/circuit-breaker/programs/circuit-breaker/: Cargo.toml
kyvern-shield/contracts/circuit-breaker/programs/circuit-breaker/src/: lib.rs
kyvern-shield/scripts/: simulation_agent.py
kyvernlabs/: README.md  package-lock.json  package.json
kyvernlabs/docs/: index.md  package-lock.json  package.json
kyvernlabs/docs/.vitepress/: config.mts
kyvernlabs/docs/api/: analyze.md  authentication.md  index.md  transactions.md
kyvernlabs/docs/research/: agent-security-crisis.md  index.md  indirect-injection.md  threat-landscape.md
kyvernlabs/docs/shield/: circuit-breaker.md  index.md  installation.md  quickstart.md  rest-api.md  sdk-python.md  sdk-typescript.md  source-detection.md  transaction-analysis.md
kyvernlabs/public/: robots.txt  site.webmanifest  sitemap.xml
kyvernlabs/src/app/: globals.css  layout.tsx  page.tsx
kyvernlabs/src/components/: CTA.tsx  Constellation.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Portfolio.tsx  Pricing.tsx  Products.tsx  Services.tsx  WhyUs.tsx  Work.tsx
stratum-labs/: README.md  package.json  tailwind.config.ts
stratum-labs/src/: types.d.ts
stratum-labs/src/app/: globals.css  layout.tsx  page.tsx
stratum-labs/src/components/: BentoGrid.tsx  CTA.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Problem.tsx  SmoothScroll.tsx  SystemPerformance.tsx  index.ts
(+16 files in other folders)
